--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "materialize-css": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.5.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -30,5 +32,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "babel-plugin-react-html-attrs": "^2.1.0"
+  },
+  "plugins": [
+    "react-html-attrs",
+    "@babel/plugin-transform-react-inline-elements"
+  ]
 }
